--- a/1.html
+++ b/1.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>second git branch test page</title>
-		<body></body>
+		<body>
+			first change
+		</body>
 	</head>
 </html>
